# Excel-Compare-and-Import

./: .dockerignore  .env  .env.alpha  .env.beta  .env.dev  .env.stable  .gitignore  Dockerfile  LICENSE  Pipfile  README.md  data.json  docker-compose.yml  index.html  package-lock.json  package.json  plugin.config.json  run.py  setup.py  tsconfig.json  tsconfig.node.json  vite.config.ts
server/: .dockerignore  .pylintrc  Dockerfile  README.md  __init__.py  config.py  pyproject.toml  pytest.ini  run.py
server/api/: __init__.py  constants.py  types.py  utils.py
server/app/: __init__.py
server/base/: __init__.py  add_args.py  base.py  cell.py  client.py  const.py  exception.py  field.py  field_config.py  field_type.py  file.py  personalbasetoken.py  progress.py  record.py  shared.py  table.py  token.py
server/cell_value/: attachment.py  cell_parser.py  checkbox.py  core.py  created_or_modified_time.py  datetime.py  exceptions.py  formula_or_lookup.py  multi_select.py  number.py  phone.py  segments.py  single_or_duplex_link.py  single_select.py  types.py  url.py  user.py
server/data_parser/: __init__.py  core.py  exceptions.py  types.py  utils.py
server/events/: core.py
server/file/: __init__.py  constants.py  core.py  exceptions.py  utils.py
server/log/: __init__.py  constants.py  utils.py
server/middleware/: __init__.py  auth.py  log.py
server/models/: __init__.py  append_model.py  authorization_model.py  basic_import_model.py  basic_model.py  data_model.py  data_source_model.py  fields_map_model.py  file_model.py
server/request/: __init__.py  (+2 more)
(+245 files in other folders)
