[project]
name = "excel-compare-and-import-server"
version = "4.0.0"
description = "Data compare and import server"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "arrow>=1.3.0",
    "baseopensdk",
    "email-validator>=2.2.0",
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "openpyxl>=3.1.5",
    "orjson>=3.10.18",
    "pandas>=2.2.3",
    "pillow>=11.2.1",
    "pycryptodome>=3.22.0",
    "python-multipart>=0.0.20",
    "uvicorn>=0.34.2",
    "werkzeug>=3.1.3",
    "xlrd>=2.0.1",
]

[tool.uv]
dev-dependencies = [
    "black>=25.1.0",
    "coverage>=7.8.0",
    "pylint>=3.3.7",
    "pytest>=8.3.5",
    "pytest-env>=1.1.5",
    "python-dotenv>=1.1.0",
]

[tool.uv.sources]
baseopensdk = { url = "https://lf3-static.bytednsdoc.com/obj/eden-cn/lmeh7phbozvhoz/base-open-sdk/baseopensdk-0.0.13-py3-none-any.whl" }
